# agentic_bank_assistant

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: main_agentic-bank-web.yml
chainlit/: app.py
data/conversations/: sos__bb691008-95b3-4643-9a2c-d8a760125686.jsonl
data/faq/: atm_limits.md  card_freeze.md  transfer_cutoff.md
data/profiles/: sos.json
infra/terraform/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf  versions.tf
src/agentic_bank/agents/: base.py
src/agentic_bank/agents/appointment/: agent_llm.py  tools.py
src/agentic_bank/agents/appointment/prompts/: system.md
src/agentic_bank/agents/cards/: agent_llm.py  tools.py
src/agentic_bank/agents/cards/prompts/: confirm.md.j2  system.md
src/agentic_bank/agents/faq/: agent_llm.py  tools.py
src/agentic_bank/agents/faq/prompts/: system.md
src/agentic_bank/api/: main.py
src/agentic_bank/core/: cache.py  conv_memory.py  logging.py  memory.py  messages.py  profile.py  promptkit.py  tooling.py  utterance.py
src/agentic_bank/core/llm/: azure.py  embeddings.py
src/agentic_bank/router/: llm_intent.py  router.py  semantic_intents.py  super_router_llm.py  topic_shift.py
