[tool.poetry]
name = "agentic-bank"
version = "0.1"
description = "Agentic AI framework (Azure OpenAI function-calling) with LLM agents, clarify router, Chainlit UI, and RAG"
authors = ["Othmane Belmoukadam <othmane.belmoukadam@be.ey.com>"]
readme = "README.md"
packages = [{ include = "agentic_bank", from = "src" }]


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = ">=0.25.0,<0.26.0"
chainlit = "1.3.2"
pydantic = "2.8.2"
python-dotenv = "^1.0.1"
openai = "^1.51.0"
jinja2 = "^3.1.4"
pyyaml = "^6.0.2"
numpy = ">=1.26,<2.0"
fastapi-cors = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"